Bug 240563 - JJ: script categories are not translatable ("Generic", "Lyrics", "Scriptable Service")
Summary: JJ: script categories are not translatable ("Generic", "Lyrics", "Scriptable ...
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: Tools/Script Manager (other bugs)
Version First Reported In: 2.3-GIT
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Amarok Bugs
URL:
Keywords: junior-jobs
Depends on:
Blocks:
 
Reported: 2010-06-03 09:49 UTC by Alexander Potashev
Modified: 2010-07-15 15:25 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.3.2
Sentry Crash Report:


Attachments
Make script categories translatable (1.34 KB, patch)
2010-06-08 17:29 UTC, Jan
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Alexander Potashev 2010-06-03 09:49:27 UTC
Version:           2.3-GIT (using KDE 4.4.3) 
OS:                Linux

Script caterories names ("Generic", "Lyrics", "Scriptable Service") in "Script manager" are not translatable.

Reproducible: Always




OS: Linux (x86_64) release 2.6.32
Compiler: x86_64-pc-linux-gnu-gcc
Comment 1 Jan 2010-06-08 17:29:43 UTC
Created attachment 47815 [details]
Make script categories translatable
Comment 2 Alexander Potashev 2010-06-08 18:52:07 UTC
(In reply to comment #1)
> Created an attachment (id=47815) [details]
> Make script categories translatable

This is not enough, these strings also appear in other places in the sources!
Comment 3 Myriam Schweingruber 2010-06-08 23:09:41 UTC
Please submit these patches on http://gitorious.org/amarok/amarok/merge_requests so the developers can have a look. 
Hint: ack-grep is a nice tool to find other entries of the strings in the source tree
Comment 4 Jan 2010-07-15 11:32:06 UTC
Those other occurrences are purely for internal. I just made the ones that are visible to the user translatable. Please note that somebody else fixed it in 26f772205e088bd418c5ed6522c550c2ac3b5fa1 but did not close this bug.
Comment 5 Myriam Schweingruber 2010-07-15 12:04:14 UTC
Thank you for the feedback.
Comment 6 Alexander Potashev 2010-07-15 13:59:08 UTC
"Lyrics" collapsed with other "Lyrics" strings. Please, split.
Comment 7 Myriam Schweingruber 2010-07-15 15:13:48 UTC
Did you read comment #4? It would be nice to be a tad more detailed of what you mean with your comment
Comment 8 Alexander Potashev 2010-07-15 15:25:34 UTC
Ok,
these strings may have different translations:
1. src/dialogs/ScriptManager.cpp:695:    m_scriptSelector->addScripts( LyricsInfoList, KPluginSelector::ReadConfigFile, i18n( "Lyrics" ) );
2. src/context/applets/lyrics/LyricsApplet.cpp:286:        m_titleText = QString( "%1 : %2" ).arg( i18n( "Lyrics" ) ).arg( data[ "html" ].toString().section( "<title>", 1, 1 ).section( "</title>", 0, 0 ) );

But they have one single entry in translation file (.po). Would be nice to have a context string for the name of the scripts category.