The scripts categories are now translatable. Changelog entries go on top

BUG: 240563